# bobr

./: .hoox.yaml  .rustfmt.toml  Cargo.toml  flake.nix
.zed/: tasks.json
docs/: README.adoc  README.md
src/: args.rs  config.rs  main.rs  multiplexer.rs  reference.rs
test/: cargo.sh  example.sh  example.toml
