[package]
name = "bobr"
version = "0.0.0"
authors = ["Alexander Weber (cchexcode) <alexanderh.weber@outlook.com>"]
edition = "2021"
license = "MIT"
description = "A simple command multiplexer."
homepage = "https://github.com/cchexcode/bobr"
repository = "https://github.com/cchexcode/bobr"
keywords = ["bobr", "cli"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.41.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "time",
] }
clap = "4.5.23"
clap_complete = "4.5.38"
clap_mangen = "0.2.24"
clap-markdown = "0.1.4"
bytes = "1.9.0"
crossterm = "0.28.1"
itertools = "0.13.0"
anyhow = "1.0.93"
signal-hook = "0.3.17"
flume = "0.11.1"
thiserror = "2.0.3"
parking_lot = "0.12.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
hoox = "0.3.0"
