[package]
name = "bobr"
version = "0.0.0"
authors = ["Alexander Weber (cchexcode) <alexanderh.weber@outlook.com>"]
edition = "2021"
license = "MIT"
description = "A simple command multiplexer."
homepage = "https://github.com/cchexcode/bobr"
repository = "https://github.com/cchexcode/bobr"
keywords = ["bobr", "cli"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = ["format+json"]
"format+json" = ["serde_json"]
"format+yaml" = ["serde_yml"]

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.42.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "time",
    "sync",
] }
clap = "4.5.23"
clap_complete = "4.5.38"
clap_mangen = "0.2.24"
clap-markdown = "0.1.4"
bytes = "1.9.0"
crossterm = "0.28.1"
itertools = "0.13.0"
anyhow = "1.0.94"
signal-hook = "0.3.17"
flume = "0.11.1"
thiserror = "2.0.4"
parking_lot = "0.12.3"
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }

serde_json = { version = "1.0.133", optional = true }
serde_yml = { version = "0.0.12", optional = true }

[dev-dependencies]
hoox = "0.3.0"
clitest = { git = "https://github.com/cchexcode/clitest_rs", rev = "b540083fec4033abb4a25f422fa010b8c17dbaa2" }
